[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medical_chatbot"
version = "0.1.0"
description = "A medical chatbot"
authors = [
  { "name" = "skander kolsi", "email" = "skouza951@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
